--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,9 @@
 			</resource>
 			<resource>
 				<directory>src/test/resources</directory>
+				<includes>
+					<include>**/*.properties</include>
+				</includes>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
