添加获取特定用户的推文

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.application.name=twitter-consumer
 #Kafka Config
 spring.kafka.bootstrap-servers=${kafka.host}:${kafka.port}
 #spring.kafka.consumer.group-id=myGroup
+
+#Redis config
+spring.redis.database=${redis.database}
+spring.redis.host=${redis.host}
+spring.redis.port=${redis.port}
+spring.redis.password=${redis.password}
+#spring.redis.ssl=
+#spring.redis.timeout=
+#spring.redis.cluster.nodes=
+#spring.redis.sentinel.master=
+#spring.redis.sentinel.nodes=
