--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 		    <version>2.9.8</version>
 		</dependency>
 		
+		 <dependency>
+         <groupId>org.redisson</groupId>
+         <artifactId>redisson-spring-boot-starter</artifactId>
+         <version>3.10.3</version>
+     </dependency> 
+		
 		<dependency>
 		    <groupId>org.jmock</groupId>
 		    <artifactId>jmock</artifactId>
