--- a/pom.xml
+++ b/pom.xml
@@ -61,13 +61,18 @@
 		    <artifactId>jackson-core</artifactId>
 		    <version>2.9.8</version>
 		</dependency>
-		
-		 <dependency>
-         <groupId>org.redisson</groupId>
-         <artifactId>redisson-spring-boot-starter</artifactId>
-         <version>3.10.3</version>
-     </dependency> 
-		
+
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson-spring-boot-starter</artifactId>
+			<version>3.10.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.8</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 		    <groupId>org.jmock</groupId>
 		    <artifactId>jmock</artifactId>
