--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,16 @@
 		    <version>2.9.0</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.tensorflow</groupId>
+			<artifactId>tensorflow</artifactId>
+			<version>1.13.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.tensorflow</groupId>
+			<artifactId>libtensorflow_jni_gpu</artifactId>
+			<version>1.13.1</version>
+		</dependency>
 		
 	</dependencies>
 
